--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <nav>
-        <div>whats wrong with this</div>
+        <div class="container-fluid border">lets start</div>
     </nav>
 </body>
 </html>
