--- a/index.html
+++ b/index.html
@@ -5,14 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/dce981d912.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
     <link rel="stylesheet" href="nav.css">
     <title>Paolo Cottini vini della Valpolicella | Az. Agricola Paolo Conttini</title>
 </head>
 <body>
-    <nav>
-        <div class="container-fluid border">lets start</div>
+    <nav class="container-fluid">
+        <div class="d-flex justify-content-center">
+            <div id="nav-box" class="py-3 d-flex justify-content-evenly align-center">
+                <div id="language" class="d-flex align-items-center">
+                    <a href="">IT</a>
+                    <a class="px-4" href="">EN</a>
+                    <a href="">DE</a>
+                </div>
+                <div id="nav-logo">
+                    <img src="img/paolo-logo.png" alt="">
+                </div>
+                <div id="menu" class="d-flex align-items-center"    >
+                    <a href="">
+                        <object data="svg" type="">
+                            <svg width="30" height="19" viewBox="0 0 30 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path class="btn-nav__line js-nav-line" d="M1 0.5V0.5C9.87822 4.62203 20.1218 4.62203 29 0.5V0.5" stroke="white"></path>
+                            <path class="btn-nav__line js-nav-line" d="M1 6V6C9.87822 10.122 20.1218 10.122 29 6V6" stroke="white"></path>
+                            <path class="btn-nav__line js-nav-line" d="M1 12V12C9.87822 16.122 20.1218 16.122 29 12V12" stroke="white"></path>
+                            </svg>
+                        </object>
+                    </a>
+                </div>  
+            </div>
+        </div>
     </nav>
 </body>
 </html>
