--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="container-fluid">
         <div class="d-flex justify-content-center">
-            <div id="nav-box" class="py-3 d-flex justify-content-evenly align-center">
+            <div id="nav-box" class="py-3 d-flex justify-content-between align-center">
                 <div id="language" class="d-flex align-items-center">
                     <a href="">IT</a>
                     <a class="px-4" href="">EN</a>
