--- a/index.html
+++ b/index.html
@@ -21,18 +21,29 @@
                     <a href="">DE</a>
                 </div>
                 <div id="nav-logo">
-                    <img src="img/paolo-logo.png" alt="">
+                    <a href="https://paolocottini.it/it">
+                        <img src="img/paolo-logo.png" alt="">
+                    </a>
                 </div>
-                <div id="menu" class="d-flex align-items-center"    >
-                    <a href="">
-                        <object data="svg" type="">
+                <div id="menu" class="d-flex align-items-center">
+                    <div class="menu-open-controler">
+                        <object id="open-btn" data="svg" type="">
                             <svg width="30" height="19" viewBox="0 0 30 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path class="btn-nav__line js-nav-line" d="M1 0.5V0.5C9.87822 4.62203 20.1218 4.62203 29 0.5V0.5" stroke="white"></path>
                             <path class="btn-nav__line js-nav-line" d="M1 6V6C9.87822 10.122 20.1218 10.122 29 6V6" stroke="white"></path>
                             <path class="btn-nav__line js-nav-line" d="M1 12V12C9.87822 16.122 20.1218 16.122 29 12V12" stroke="white"></path>
                             </svg>
                         </object>
-                    </a>
+                    </div>
+                    <div class="menu-close-controler">
+                        <object id="close-btn" data="svg" type="">
+                            <svg width="30" height="19" viewBox="0 0 30 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path class="btn-nav__line js-nav-line" d="M1 9.5V9.5C9.45221 3.76457 20.5478 3.76457 29 9.5V9.5" stroke="white"></path>
+                                <path class="btn-nav__line js-nav-line" d="M1 15.5V15.5C9.45221 9.76457 20.5478 9.76457 29 15.5V15.5" stroke="white"></path>
+                                <path class="btn-nav__line js-nav-line" d="M1 21.5V21.5C9.45221 15.7646 20.5478 15.7646 29 21.5V21.5" stroke="white"></path>
+                            </svg>
+                        </object>
+                    </div>
                 </div>  
             </div>
         </div>
