--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
                     </a>
                 </div>
                 <div id="menu" class="d-flex align-items-center">
-                    <div class="menu-open-controler">
-                        <i class="fas fa-angle-double-down"></i>
-                    </div>
-                    <div class="menu-close-controler">
-                        <i class="fas fa-angle-double-up"></i>
+                    <div class="menu-controler">
+                        <div id="down">
+                            <i class="fas fa-angle-double-down"></i>
+                        </div>
+                        <div id="up">
+                            <i class="fas fa-angle-double-up"></i>
+                        </div>
                     </div>
                 </div>  
             </div>
