--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                 <li>NEWS & EVENTI</li>
                                 <li>CONTATTI</li>
                                 <div>
-                                    <div>give me the secend</div>
+                                    <div></div>
                                     <div></div>
                                     <div></div>
                                 </div>
